# telegram-mcp-plus

./: .gitignore  README.md  context.md  pyproject.toml  run_mcp.sh
docs/: 01-architecture.md  02-implementation-plan.md  03-test-scenarios.md  04-security-tests.md  05-performance-tests.md  06-tool-schemas.md
src/telegram_mcp_plus/: __main__.py  auth.py  client.py  server.py
src/telegram_mcp_plus/tools/: dialog.py  dialogs.py  folder.py  folders.py  me.py  read.py  send.py
tests/: conftest.py  test_security.py  test_stability.py
