[project]
name = "telegram-mcp-plus"
version = "0.1.0"
description = "Telegram MCP server with folder support — built on Telethon"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "telethon>=1.42.0",
]

[project.scripts]
telegram-mcp-plus = "telegram_mcp_plus.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_mcp_plus"]
